# h_pro

./: .gitignore
QtCalc/: CMakeLists.txt  Logger.cpp  Logger.h  Main.qml  main.cpp
QtSignalsAndSlots/: .gitignore  Analyzer.cpp  Analyzer.h  CMakeLists.txt  Config.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  README.md  Sensor.cpp  Sensor.h  SensorMetric.h  config.json  main.cpp
gate_controller/: CMakeLists.txt
gate_controller/lib/: CMakeLists.txt  counter.cpp  counter.h  gate.cpp  gate.h
gate_controller/src/: CMakeLists.txt  main.cpp
